Runtime client fix